# spotifyws

./: .gitignore  MANIFEST  README.md  __init__.py  example.py  pyproject.toml  setup.py  test.py
examples/flask-app/: README.md  server.py
examples/flask-app/templates/: index.html
spotify_ws.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spotifyws/: __init__.py  config.py  logger.py  spotify.py  utils.py  ws.py
spotifyws.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ws/: config.py  logger.py
